--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,12 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-migrations-bundle": "^1.0",
         "symfony/assetic-bundle": "^2.8",
-        "knplabs/knp-paginator-bundle": "^2.5"
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "sonata-project/admin-bundle": "^3.13",
+        "sonata-project/block-bundle": "^3.3",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.1",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "gregwar/captcha": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
